--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/position.css">
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" type="text/javascript"></script>
         <script src="js/mySketch.js" type="text/javascript"></script>
         <script src="js/frag_functions_default.js" type="text/javascript"></script>
         <script src="js/frag.js" type="text/javascript"></script>
         <script src="js/vert.js" type="text/javascript"></script>
-        <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" type="text/javascript"></script>
-
+        <!-- <script src="js/sketch.js" type="text/javascript"></script> -->
     </head>
 <body>
+    <div id= "canvas1HTML">
+    </div>
      <div id = "heading">
         <h1>TIME TRAVELERS</h1>
         <h3 class="cursive">our perception of time</h3>
