--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
         <script src="js/frag.js" type="text/javascript"></script>
         <script src="js/vert.js" type="text/javascript"></script>
         <!-- <script src="js/sketch.js" type="text/javascript"></script> -->
+        <link rel="stylesheet" type="text/css" href="css/position.css">
     </head>
 <body>
     <div id= "canvas1HTML">
     </div>
-     <div id = "heading">
+     <div class = "heading">
         <h1>TIME TRAVELERS</h1>
-        <h3 class="cursive">our perception of time</h3>
-        <div style="padding-left: 60vw;">
-            <p style="text-align: right"> "Time travelers: a cliche term in popular culture which we appropriated to mean people literally travelling in different speeds and points in time."<br><em>- Taeyoon Choi, School of Poetic Computation.</em></p>
+        <div>
+            <h3 class ="cursive"> our perception of time</h3>
+            <div>
+            <p> "Time travelers: a cliche term in popular culture which we appropriated to mean people literally travelling in different speeds and points in time."
+            <p class = "cursive" id= "quote">- Taeyoon Choi, School of Poetic Computation.</p>
+        </div>
         </div>
     </div>
     
