--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="js/frag_functions_default.js" type="text/javascript"></script>
         <script src="js/frag.js" type="text/javascript"></script>
         <script src="js/vert.js" type="text/javascript"></script>
-        <!-- <script src="js/sketch.js" type="text/javascript"></script> -->
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/position.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -30,7 +30,7 @@
 
 
      <!--The Questionnaire Section-->
-     <div class="section nav-section" id = "section2"  style="margin-top: -3px; background-image: url('img/backgroundcontinue.png'); background-position: center top; background-repeat: no-repeat; background-size: contain;">
+     <div class="section nav-section" id="section2" style="margin-top: -3px;">
         <div style="height:150px"></div>
         <div class="row">
             <div class="col-md-3" id="q1" style="padding-right: 40px;" data-aos="fade-in"></div>
