--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
     <head>
-        <link rel="stylesheet" href="css/position.css">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" type="text/javascript"></script>
         <script src="js/mySketch.js" type="text/javascript"></script>
         <script src="js/frag_functions_default.js" type="text/javascript"></script>
@@ -31,7 +30,8 @@
 
      <!--The Questionnaire Section-->
      <div class="section nav-section" id="section2" style="margin-top: -3px;">
-        <div style="height:150px"></div>
+        <p> How much do you agree with the following statements.</p>
+        <div></div>
         <div class="row">
             <div class="col-md-3" id="q1" style="padding-right: 40px;" data-aos="fade-in"></div>
             <div class="col-md-3" id="q2" style="padding-left: 40px; padding-right: 40px;" data-aos="fade-in"></div>
