--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <script src="js/frag.js" type="text/javascript"></script>
         <script src="js/vert.js" type="text/javascript"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/position.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
 <body>
     <div id= "canvas1HTML">
@@ -30,7 +30,7 @@
 
      <!--The Questionnaire Section-->
      <div class="section nav-section" id="section2" style="margin-top: -3px;">
-        <p> How much do you agree with the following statements.</p>
+        <p class="book"> How much do you agree with the following statements.</p>
         <div></div>
         <div class="row">
             <div class="col-md-3" id="q1" style="padding-right: 40px;" data-aos="fade-in"></div>
@@ -42,6 +42,47 @@
         <div style="height:400px">
             <div id="questionaire"></div>
         </div>
+    </div>
+
+    <div>
+        <p id="intro"> The concept of</p>
+        <p class="glitch" data-text="Time."> Time.</p>
+        <p class="book"> 
+            There is no greater terror in this world than time, flitting about, 
+            just out of vision and reach, one may flee to the ends of the world to avoid its presence, 
+            or else disguise it amidst a thousand pleasures. But when the day is spent, every grain of sand drained, 
+            then time will once again reveal itself, in all of its unknown horrors. 
+        </p>
+
+        <p class="book">
+            In our daily lives, we may not take time for granted, but we habitually live by a regimented 
+            measure of time. Our schedules are oftentimes full of entries such as “9:10 a.m. Greek Lecture” 
+            or “3:45 p.m. Classes, jobs, even recreation may be calculated down to a precise minute or even 
+            second. Unfailingly, we base our entire day around time, secure in the knowledge that as everything 
+            else ebbs and flows around us, time will remain constant, ticking an inexorable march forward. 
+        </p>
+
+        <p class="book">
+            However, looking into anywhere but the present, we would come to the realization that time, 
+            at least as we know it, was (and presumably still is) anything but a neutral construct. 
+            We may live by time, depend on it, and even come to be enslaved by it, but the reassurance of 
+            its constancy rests upon ephemeral foundations. If anything else, the constancy and precision 
+            of time as we know it (insofar as it is possible to “know” time) is a recent construction. 
+        </p>
+
+        <p class="book">
+            This does not bear on the linear progression of time or time as an aggregated concept. 
+            Rather, time as we’ve seen it, the 12s, the 5s, the 60s  swirling about us in a constant, 
+            and yet maddeningly arbitrary swirl of progression, is a fabrication, much like baloney, 
+            pedigree dog breeds, and fashion items. To wit, the ability to calculate time down to its 
+            very minutiae, is a product of modernity, for good or for worse. 
+        </p>
+
+        <p class="book">
+            Then if time is not the precise ticking of seconds to minutes, minutes to hours, 
+            and hours to days, what is time? Is it an abstract toy of science? A gold inlaid toy of 
+            dilettants manufactured by the swiss, or something else altogether? 
+        </p>
     </div>
     
     
