--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
         <script src="js/frag_functions_default.js" type="text/javascript"></script>
         <script src="js/frag.js" type="text/javascript"></script>
         <script src="js/vert.js" type="text/javascript"></script>
+        <script src="js/bubbles.js" type="text/javascript"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <link rel="stylesheet" type="text/css" href="css/glitch.css">
     </head>
 <body>
     <div id= "canvas1HTML">
 
     </div> <br>
- 
+    <div class = "notcanvas">
      <div class = "heading">
         <h1>TIME TRAVELERS</h1>
         <div>
@@ -84,7 +85,8 @@
             dilettants manufactured by the swiss, or something else altogether? 
         </p>
     </div>
-    
+</div>
+<div id= "canvas2HTML"></div>
     
       <!-- Vis JS -->
 
