--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" type="text/javascript"></script>
         <script src="js/mySketch.js" type="text/javascript"></script>
+        <script src="js/bubbles.js" type="text/javascript"></script>
         <script src="js/frag_functions_default.js" type="text/javascript"></script>
         <script src="js/frag.js" type="text/javascript"></script>
         <script src="js/vert.js" type="text/javascript"></script>
