--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="js/frag_functions_default.js" type="text/javascript"></script>
     <script src="js/frag.js" type="text/javascript"></script>
     <script src="js/vert.js" type="text/javascript"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="styles/css/style.css">
     <!--         <link rel="stylesheet" type="text/css" href="styles/css/glitch.css"> -->
 </head>
