--- a/index.html
+++ b/index.html
@@ -38,30 +38,32 @@
                 <div class="questions-left">
                    <div id="q-1" class="question-section">
                         <p class="statement">time is money</p>
+                        <p class="answer"></p>
                         <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
                                 <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="">
+                                <input type="radio" name="agreement" id="neutral" value="Neutral">
                                 <label for="neutral">Neutral</label>
                             </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
                                 <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="">
+                                <input type="radio" name="agreement" id="disagree" value="Disagree">
                                 <label for="disagree">Disagree</label>
                             </div>
                         </div>
                     </div>
                     <div id="q-3" class="question-section">
                         <p class="statement">silence is uncomfortable</p>
+                        <p class="answer"></p>
                         <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
                                 <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="">
+                                <input type="radio" name="agreement" id="neutral" value="Neutral">
                                 <label for="neutral">Neutral</label>
                             </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
                                 <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="">
+                                <input type="radio" name="agreement" id="disagree" value="Disagree">
                                 <label for="disagree">Disagree</label>
                             </div>
                         </div>
@@ -84,30 +86,32 @@
                 <div class="questions-right">
                     <div id="q-2" class="question-section">
                         <p class="statement">you would rather be late for your next meeting than cut the flow of your current discussion</p>
+                        <p class="answer"></p>
                         <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
                                 <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="">
+                                <input type="radio" name="agreement" id="neutral" value="Neutral">
                                 <label for="neutral">Neutral</label>
                             </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
                                 <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="">
+                                <input type="radio" name="agreement" id="disagree" value="Disagree">
                                 <label for="disagree">Disagree</label>
                             </div>
                         </div>
                     </div>
                     <div id="q-4" class="question-section">
                         <p class="statement">time is measured by the clock</p>
+                        <p class="answer"></p>
                         <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
                                 <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="">
+                                <input type="radio" name="agreement" id="neutral" value="Neutral">
                                 <label for="neutral">Neutral</label>
                             </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="">
+                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
                                 <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="">
+                                <input type="radio" name="agreement" id="disagree" value="Disagree">
                                 <label for="disagree">Disagree</label>
                             </div>
                         </div>
