--- a/index.html
+++ b/index.html
@@ -37,41 +37,41 @@
             <div class="container">
                 <div class="questions-left">
                    <div id="q-1" class="question-section">
-                        <p class="statement">time is money</p>
-                        <p class="answer"></p>
-                        <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
-                                <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="Neutral">
-                                <label for="neutral">Neutral</label>
-                            </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
-                                <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="Disagree">
-                                <label for="disagree">Disagree</label>
-                            </div>
+                    <p class="statement">time is money</p>
+                    <p class="answer"></p>
+                    <div class="choices">
+                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                            <label for="strongly">Strongly Agree</label>
+                            <input type="radio" name="agreement" id="neutral" value="Neutral">
+                            <label for="neutral">Neutral</label>
                         </div>
-                    </div>
-                    <div id="q-3" class="question-section">
-                        <p class="statement">silence is uncomfortable</p>
-                        <p class="answer"></p>
-                        <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
-                                <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="Neutral">
-                                <label for="neutral">Neutral</label>
-                            </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
-                                <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="Disagree">
-                                <label for="disagree">Disagree</label>
-                            </div>
+                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                            <label for="slightly">Slightly Agree</label>
+                            <input type="radio" name="agreement" id="disagree" value="Disagree">
+                            <label for="disagree">Disagree</label>
                         </div>
                     </div>
                 </div>
-                <div class="clock-section">
-                  <!-- <div class="box">&nsbp;</div> -->
-                    <div class="clock">
+                <div id="q-3" class="question-section">
+                    <p class="statement">silence is uncomfortable</p>
+                    <p class="answer"></p>
+                    <div class="choices">
+                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                            <label for="strongly">Strongly Agree</label>
+                            <input type="radio" name="agreement" id="neutral" value="Neutral">
+                            <label for="neutral">Neutral</label>
+                        </div>
+                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                            <label for="slightly">Slightly Agree</label>
+                            <input type="radio" name="agreement" id="disagree" value="Disagree">
+                            <label for="disagree">Disagree</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clock-section">
+              <!-- <div class="box">&nsbp;</div> -->
+                    <!-- <div class="clock">
                       <div class="clock__outline-outer">
                          <div class="clock__outline">
                           <div class="clock__second"></div>
@@ -80,45 +80,88 @@
                           <div class="clock__axis"></div>
                       </div>
                       </div>
-                    </div>
-
+                  </div> -->
+                  <div class="spinner">
+                    <div class="spinner__outline">
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <p class="result result-darken">time move towards you</p>
+                       <!--  <div class="circle">
+                            <div class="circle">
+                                <div class="circle">
+                                    <div class="circle">
+                                        <div class="circle">
+                                            <div class="circle">
+                                                <div class="circle">
+                                                    <div class="circle">
+                                                        <div class="circle">
+                                                          <div class="circle">
+                                                            <div class="circle">
+                                                                <div class="circle">
+                                                                    <p class="result">time move towards you</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
-                <div class="questions-right">
-                    <div id="q-2" class="question-section">
-                        <p class="statement">you would rather be late for your next meeting than cut the flow of your current discussion</p>
-                        <p class="answer"></p>
-                        <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
-                                <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="Neutral">
-                                <label for="neutral">Neutral</label>
-                            </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
-                                <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="Disagree">
-                                <label for="disagree">Disagree</label>
-                            </div>
-                        </div>
+
+            </div>
+
+        </div>
+        <div class="questions-right">
+            <div id="q-2" class="question-section">
+                <p class="statement">you would rather be late for your next meeting than cut the flow of your current discussion</p>
+                <p class="answer"></p>
+                <div class="choices">
+                    <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                        <label for="strongly">Strongly Agree</label>
+                        <input type="radio" name="agreement" id="neutral" value="Neutral">
+                        <label for="neutral">Neutral</label>
                     </div>
-                    <div id="q-4" class="question-section">
-                        <p class="statement">time is measured by the clock</p>
-                        <p class="answer"></p>
-                        <div class="choices">
-                            <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
-                                <label for="strongly">Strongly Agree</label>
-                                <input type="radio" name="agreement" id="neutral" value="Neutral">
-                                <label for="neutral">Neutral</label>
-                            </div>
-                            <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
-                                <label for="slightly">Slightly Agree</label>
-                                <input type="radio" name="agreement" id="disagree" value="Disagree">
-                                <label for="disagree">Disagree</label>
-                            </div>
-                        </div>
+                    <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                        <label for="slightly">Slightly Agree</label>
+                        <input type="radio" name="agreement" id="disagree" value="Disagree">
+                        <label for="disagree">Disagree</label>
+                    </div>
+                </div>
+            </div>
+            <div id="q-4" class="question-section">
+                <p class="statement">time is measured by the clock</p>
+                <p class="answer"></p>
+                <div class="choices">
+                    <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                        <label for="strongly">Strongly Agree</label>
+                        <input type="radio" name="agreement" id="neutral" value="Neutral">
+                        <label for="neutral">Neutral</label>
+                    </div>
+                    <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                        <label for="slightly">Slightly Agree</label>
+                        <input type="radio" name="agreement" id="disagree" value="Disagree">
+                        <label for="disagree">Disagree</label>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
 
 <!-- temporary spacing -->
