--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <div class="circle"></div>
                         <div class="circle"></div>
                         <div class="circle"></div>
-                        <p class="result result-darken">time move towards you</p>
+                        <p class="result result__darken book">time move towards you</p>
                        <!--  <div class="circle">
                             <div class="circle">
                                 <div class="circle">
