--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                     <p class="statement">time is money</p>
                     <p class="answer"></p>
                     <div class="choices">
-                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
                             <label for="strongly">Strongly Agree</label>
-                            <input type="radio" name="agreement" id="neutral" value="Neutral">
+                            <input type="radio" name="agreement" id="neutral" value="2">
                             <label for="neutral">Neutral</label>
                         </div>
-                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
                             <label for="slightly">Slightly Agree</label>
-                            <input type="radio" name="agreement" id="disagree" value="Disagree">
+                            <input type="radio" name="agreement" id="disagree" value="3">
                             <label for="disagree">Disagree</label>
                         </div>
                     </div>
@@ -56,22 +56,21 @@
                     <p class="statement">silence is uncomfortable</p>
                     <p class="answer"></p>
                     <div class="choices">
-                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
                             <label for="strongly">Strongly Agree</label>
-                            <input type="radio" name="agreement" id="neutral" value="Neutral">
+                            <input type="radio" name="agreement" id="neutral" value="2">
                             <label for="neutral">Neutral</label>
                         </div>
-                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
                             <label for="slightly">Slightly Agree</label>
-                            <input type="radio" name="agreement" id="disagree" value="Disagree">
+                            <input type="radio" name="agreement" id="disagree" value="3">
                             <label for="disagree">Disagree</label>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="clock-section">
-              <!-- <div class="box">&nsbp;</div> -->
-                    <!-- <div class="clock">
+                    <div class="clock">
                       <div class="clock__outline-outer">
                          <div class="clock__outline">
                           <div class="clock__second"></div>
@@ -80,65 +79,22 @@
                           <div class="clock__axis"></div>
                       </div>
                       </div>
-                  </div> -->
-                  <div class="spinner">
-                    <div class="spinner__outline">
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <p class="result result__darken book">time move towards you</p>
-                       <!--  <div class="circle">
-                            <div class="circle">
-                                <div class="circle">
-                                    <div class="circle">
-                                        <div class="circle">
-                                            <div class="circle">
-                                                <div class="circle">
-                                                    <div class="circle">
-                                                        <div class="circle">
-                                                          <div class="circle">
-                                                            <div class="circle">
-                                                                <div class="circle">
-                                                                    <p class="result">time move towards you</p>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
-
-            </div>
-
+                  </div>
+                  <div class="spinner"></div>
         </div>
         <div class="questions-right">
             <div id="q-2" class="question-section">
                 <p class="statement">you would rather be late for your next meeting than cut the flow of your current discussion</p>
                 <p class="answer"></p>
                 <div class="choices">
-                    <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                    <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
                         <label for="strongly">Strongly Agree</label>
-                        <input type="radio" name="agreement" id="neutral" value="Neutral">
+                        <input type="radio" name="agreement" id="neutral" value="2">
                         <label for="neutral">Neutral</label>
                     </div>
-                    <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                    <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
                         <label for="slightly">Slightly Agree</label>
-                        <input type="radio" name="agreement" id="disagree" value="Disagree">
+                        <input type="radio" name="agreement" id="disagree" value="3">
                         <label for="disagree">Disagree</label>
                     </div>
                 </div>
@@ -147,14 +103,14 @@
                 <p class="statement">time is measured by the clock</p>
                 <p class="answer"></p>
                 <div class="choices">
-                    <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="Strongly Agree">
+                    <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
                         <label for="strongly">Strongly Agree</label>
-                        <input type="radio" name="agreement" id="neutral" value="Neutral">
+                        <input type="radio" name="agreement" id="neutral" value="2">
                         <label for="neutral">Neutral</label>
                     </div>
-                    <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="Slightly Agree">
+                    <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
                         <label for="slightly">Slightly Agree</label>
-                        <input type="radio" name="agreement" id="disagree" value="Disagree">
+                        <input type="radio" name="agreement" id="disagree" value="3">
                         <label for="disagree">Disagree</label>
                     </div>
                 </div>
@@ -184,7 +140,7 @@
             else ebbs and flows around us, time will remain constant, ticking an inexorable march forward. 
         </p>
 
-        <p class="book news " style="max-width:350px;">
+        <p class="book news" style="max-width:350px;">
             However, looking into anywhere but the present, we would come to the realization that time, 
             at least as we know it, was (and presumably still is) anything but a neutral construct. 
             We may live by time, depend on it, and even come to be enslaved by it, but the reassurance of 
@@ -210,6 +166,6 @@
 </div>
 <div id= "canvas2HTML"></div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-<script src="js/clock.js"></script>
+<script src="js/questionnaire.js"></script>
 </body>
 </html>
