--- a/index.html
+++ b/index.html
@@ -120,49 +120,18 @@
 </div>
 
 
+<div class="intro">
+    <img id ="concept" src="img/concept.png">
+ <div class="glitch-container">
+    <p class="glitch bold" data-text="Time."> Time.</p>
+</div>
 <div>
-    <p id="intro"> The concept of</p>
-    <p class="glitch" data-text="Time."> Time.</p>
-    <div class ="flex">
-        <p class="book news" style="max-width:350px"> 
-            There is no greater terror in this world than time, flitting about, 
-            just out of vision and reach, one may flee to the ends of the world to avoid its presence, 
-            or else disguise it amidst a thousand pleasures. But when the day is spent, every grain of sand drained, 
-            then time will once again reveal itself, in all of its unknown horrors. 
-            <br>
-
-            In our daily lives, we may not take time for granted, but we habitually live by a regimented 
-            measure of time. Our schedules are oftentimes full of entries such as “9:10 a.m. Greek Lecture” 
-            or “3:45 p.m. Classes, jobs, even recreation may be calculated down to a precise minute or even 
-            second. Unfailingly, we base our entire day around time, secure in the knowledge that as everything 
-            else ebbs and flows around us, time will remain constant, ticking an inexorable march forward. 
-        </p>
-
-        <p class="book news" style="max-width:350px;">
-            However, looking into anywhere but the present, we would come to the realization that time, 
-            at least as we know it, was (and presumably still is) anything but a neutral construct. 
-            We may live by time, depend on it, and even come to be enslaved by it, but the reassurance of 
-            its constancy rests upon ephemeral foundations. If anything else, the constancy and precision 
-            of time as we know it (insofar as it is possible to “know” time) is a recent construction. 
-            <br>
-            This does not bear on the linear progression of time or time as an aggregated concept. 
-            Rather, time as we’ve seen it, the 12s, the 5s, the 60s  swirling about us in a constant, 
-            and yet maddeningly arbitrary swirl of progression, is a fabrication, much like baloney, 
-            pedigree dog breeds, and fashion items. To wit, the ability to calculate time down to its 
-            very minutiae, is a product of modernity, for good or for worse. 
-        </p>
-
-        <p class="cursive blob" style="max-width:550px;margin-top: 200px;margin-left: 50px;font-size:25pt;" >
-            Then if time is not the precise ticking of seconds to minutes, minutes to hours, 
-            and hours to days, what is time? Is it an abstract toy of science? A gold inlaid toy of 
-            dilettants manufactured by the swiss, or something else altogether? 
-        </p>
-
-
+       
+        <img class ="grid" src="img/warp-grid-background.png">
     </div>
 </div>
 </div>
-<div id= "canvas2HTML"></div>
+<div  id= "canvas2HTML"></div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 <script src="js/questionnaire.js"></script>
 </body>
