--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
 </div>
 </div>
-<div id= "canvas2HTML"></div>
+<!-- <div id= "canvas2HTML"></div> -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 <script src="js/questionnaire.js"></script>
 </body>
