--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" type="text/javascript"></script>
-    <!--        <script src="js/mySketch.js" type="text/javascript"></script>-->
+    <script src="js/mySketch.js" type="text/javascript"></script>
     <script src="js/frag_functions_default.js" type="text/javascript"></script>
     <script src="js/frag.js" type="text/javascript"></script>
     <script src="js/vert.js" type="text/javascript"></script>
@@ -11,24 +11,35 @@
 <body>
 <div id= "canvas1HTML"></div>
 <br>
-<div class = "notcanvas">
-    <div class = "heading">
-        <h1>TIME TRAVELERS</h1>
-        <div>
-            <h3 class ="cursive"> our perception of time</h3>
-            <div>
-                <p> "Time travelers: a cliche term in popular culture which we appropriated to mean people literally travelling in different speeds and points in time."
-                <p class = "cursive" id= "quote">- Taeyoon Choi, School of Poetic Computation.</p>
-            </div>
-        </div>
-    </div>
+<div class="scroll-outer">
+<div class = "notcanvas y mandatory-scroll-snapping">
     <!--The Questionnaire Section-->
-    <div class="section nav-section" id="questionnaire">
+    <div class="section" id="questionnaire-intro">
+        <div class="quote">
+            <h1>TIME TRAVELERS:</h1>
+            <h1>a cliche term in popular culture which we appropriated to mean people literally
+                travelling in different speeds and points in time.</h1>
+            <br>
+            <h1>Taeyoon Choi</h1>
+            <p>School of Poetic Computation</p>
+        </div>
+
+<!--        <div>-->
+<!--&lt;!&ndash;            <h3 class ="cursive"> our perception of time</h3>&ndash;&gt;-->
+<!--            <div>-->
+<!--                <p> "Time travelers: a cliche term in popular culture which we appropriated to mean people literally-->
+<!--                    travelling in different speeds and points in time."-->
+<!--                <p class = "cursive" id= "quote">- Taeyoon Choi, School of Poetic Computation.</p>-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="top">
             <p class="book">Your Understanding of Time:</p>
-            <a id="start">begin</a>
+            <a id="start" href="#questionnaire-section">begin</a>
         </div>
         <p class="leadin book"> How much do you agree with the following statements:</p>
+    </div>
+    <div class="section" id="questionnaire-section">
+
         <div class="container">
             <div class="questions-left">
                 <div id="q-1" class="question-section">
@@ -113,16 +124,47 @@
             </div>
         </div>
     </div>
-    <div class="intro">
-        <
-<!--        <img id ="concept" src="img/concept.png">-->
-<!--        <div class="glitch-container">-->
-<!--            <p class="glitch bold" data-text="Time."> Time.</p>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <img class="grid" src="img/warp-grid-background.png">-->
-<!--        </div>-->
+    <div class="section" id="notes-section">
+        <div class="top">
+            <img id ="concept" src="img/concept.png">
+            <div class="glitch-container">
+                <p class="glitch bold" data-text="Time."> Time.</p>
+            </div>
+        </div>
+        <div class="notes-text">
+<!--            <img style="height: 500px; width:200px;" src="img/notes-background.png">-->
+            <div class="text">
+                <p>There is no greater terror in this world than time, flitting about, just out of vision and reach, one may
+                flee to the ends of the world to avoid its presence, or else disguise it amidst a thousand pleasures. But when
+                the day is spent and every grain of sand drained, then time will once again reveal itself in all its unknown
+                horrors.</p>
+                <p>In our daily lives, we may not take time for granted, but we habitually live by a regimented measure of
+                time. Our schedules are oftentimes full of entries such as "9:10 a.m. Greek Lecture" or "3:45 p.m. Design
+                Sprint". Classes, jobs, even recreation may be calculated down to a precise minute or even second.
+                Unfailingly, we base our entire day around time, secure in the knowledge that as everything else ebbs and
+                flows around us, time will remain constant, ticking an inexorable march forward.</p>
+                <p>However, looking into anywhere but the present, we would come to the realization that time, at least as
+                we know it, was (and presumably still is) anything but a neutral construct. We may live by time, depend on
+                it, and even come to be enslaved by it, but the reassurance of its constancy rests upon ephemeral foundations.
+                If anything else, the constancy and precision of time as we know it (insofar as it is possible to "know"
+                time) is a recent construction.</p>
+                <p>This does not bear on the linear progression of time or time as an aggregated concept. Rather, time as
+                we've seen it, the 12st, the 5s, the 60s swirling abut us in a constant, and yet maddeningly arbitrary swirl
+                of progress, is a fabrication, much like baloney, pedigree dog breeds, and fashion items. To wit, the ability
+                to calculate and appraise time down to its very second, is a product of modernity, for good or for worse.</p>
+                <p>Then if time is not the precise ticking of seconds to minutes, minutes to hours, and hours to day, then
+                what is time? Is it an abstract toy of science? A gold inlaid toy of dilettants manufactured by the swiss,
+                or something else altogether?</p>
+            </div>
+        </div>
     </div>
+    <div class="section" id="placeholder-next-section" style="border: 1px solid turquoise">
+        <p>placeholder text</p>
+    </div>
+    <div class="section" id="placeholder-next-next-section" style="border:1px solid whitesmoke">
+        <p>placeholder text</p>
+    </div>
+</div>
 </div>
 <div  id= "canvas2HTML"></div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
